Give correct spacing to legend

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -212,6 +212,9 @@ span.postcode {
 }
 
 // Exemptions screen
+.wex_legend{
+  margin-bottom: 0.83333em;
+}
 .wex_exemption{
   border-bottom: 1px solid #bfc1c3;
   width: 100%;
